src/objects/Disti_Approval_Margin__c.object
<CustomObject>
    <description>Sliding scale of distributor margins</description>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Disti Margins</relationshipLabel>
        <relationshipName>Disti_Margins</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Margin__c</fullName>
        <label>Estimated Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Discount__c</fullName>
        <label>From Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Need_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disti Manager Approval Required</description>
        <inlineHelpText>Disti Manager Approval Required</inlineHelpText>
        <label>Need Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Discount__c</fullName>
        <label>To Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Disti Approval Margin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Distributor_Name__c</columns>
        <columns>From_Discount__c</columns>
        <columns>To_Discount__c</columns>
        <columns>Estimated_Margin__c</columns>
        <columns>Need_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Disti Approval Margin Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disti Margins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>